--- a/todo.txt
+++ b/todo.txt
@@ -10,8 +10,6 @@ LOW PRIORITY
 - fix hot reloading issue for blog links
 - upgrade to font awesome v5
 - line breaks for katex equations on mobile
-- fix orchard game second simulation blowing up chrome (run it, go to other tab for a while, come back and try to interact)
-  - maybe not an issue??
 - MDX! https://github.com/mdx-js/mdx#mdx-syntax, https://github.com/nhducit/gatsby-plugin-mdx
 
 LOWEST PRIORITY
@@ -47,6 +45,10 @@ IDEAS
   - https://phys.org/news/2018-03-mathematicians-tool-voting-unfairly-drawn.html
   - https://www.quantamagazine.org/the-math-behind-gerrymandering-and-wasted-votes-20171012/
   - https://www.quantamagazine.org/the-mathematics-behind-gerrymandering-20170404/
+  - https://sites.tufts.edu/gerrymandr/resources/
+  - http://slco.maps.arcgis.com/apps/Cascade/index.html?appid=eeb9eadb9d0d454faadf733ed2f14569
+  - http://www.ams.org/publications/journals/notices/201709/rnoti-p1020.pdf
+  - http://www.washingtonpost.com/wp-srv/special/politics/gerrymandering/?noredirect=on
 - https://www.vox.com/energy-and-environment/2018/3/20/17128478/solar-duck-curve-nrel-researcher?utm_campaign=drvox&utm_content=chorus&utm_medium=social&utm_source=twitter
 - http://www.newsweek.com/gravity-could-trap-alien-civilizations-super-earth-planets-897254
 - jury math 
@@ -54,3 +56,12 @@ IDEAS
 - bar exam https://www.adaptibar.com/bar-exam-statistics-17.aspx
 - intergalactic climate change: https://www.space.com/40813-climate-change-killed-aliens-easter-island.html
 
+- gerrymandering
+ - visualization with squares, try to "pack and crack"
+ - examples of highly gerrymandered districts
+ - compactness, shortest splitline (make a visualization)
+   - http://theconversation.com/can-math-solve-the-congressional-districting-problem-44963
+   - http://www.ams.org/publicoutreach/feature-column/fc-2014-08
+   - http://rangevoting.org/GerryExec.html
+ - compactness doesn't guarantee anything!
+ - efficiency gap visualization(s)?
