--- a/todo.txt
+++ b/todo.txt
@@ -1,6 +1,4 @@
-- figure out line ordering at intersections
-- handle clicks and mouseovers
-  - use different cursors?
+- styling when clicking on/off
 - test for and display number of regions
 
 LOW PRIORITY
