--- a/todo.txt
+++ b/todo.txt
@@ -1,6 +1,6 @@
-- clicking in intersection removes all matches, not one
-- hovering on segment and its width?
 - show district data in color of winning party 
+- layout on right side
+- handle touch events as well as mouse events
 
 LOW PRIORITY
 - get more heat map data (mayyybeeeee)
