futzing with icons

--- a/todo.txt
+++ b/todo.txt
@@ -1,7 +1,7 @@
 - decide on consistent set of icons
 - finalize slider bounds
 - make sure graphs look good in extreme slider conditions
-- fix slider nonsense (when some values are 0)
+- fix slider nonsense (when some values are 0) -- figure out why NaN values are showing up and truncating the solutions
 - fix last model -- not seeing nonlinear effects?
 
 LOW PRIORITY
