--- a/todo.txt
+++ b/todo.txt
@@ -28,44 +28,31 @@ LOWEST PRIORITY
   - have progress bar
 - better way to import data into components
 
-IDEAS
-- keypad hacking
-- knowing what you don't know
-- tipping points
-- gun violence: http://www.shootingtracker.com/
 - gerrymandering
-  - https://phys.org/news/2018-03-mathematicians-tool-voting-unfairly-drawn.html
-  - https://www.quantamagazine.org/the-math-behind-gerrymandering-and-wasted-votes-20171012/
-  - https://www.quantamagazine.org/the-mathematics-behind-gerrymandering-20170404/
-  - https://sites.tufts.edu/gerrymandr/resources/
-  - http://slco.maps.arcgis.com/apps/Cascade/index.html?appid=eeb9eadb9d0d454faadf733ed2f14569
-  - http://www.ams.org/publications/journals/notices/201709/rnoti-p1020.pdf
-  - http://www.washingtonpost.com/wp-srv/special/politics/gerrymandering/?noredirect=on
-  - https://www.politico.com/f/?id=0000015c-11a2-d46a-a3ff-9da240e10002
-- https://www.vox.com/energy-and-environment/2018/3/20/17128478/solar-duck-curve-nrel-researcher?utm_campaign=drvox&utm_content=chorus&utm_medium=social&utm_source=twitter
-- http://www.newsweek.com/gravity-could-trap-alien-civilizations-super-earth-planets-897254
-- organ donation rates by state?
-- jury math 
-  - broadchurch: unanimous or majority
-- bar exam https://www.adaptibar.com/bar-exam-statistics-17.aspx
-- what names appear most frequently in pop songs? do they impact names in census data?
-- this is not normal -- things that people think are normally distributed but aren't, and what effect these misconceptions have
-  - income distributions over time?
-
-- gerrymandering
- - visualization with squares, try to "pack and crack"
- - examples of highly gerrymandered districts
- - compactness, shortest splitline (make a visualization)
-   - http://theconversation.com/can-math-solve-the-congressional-districting-problem-44963
-   - http://www.ams.org/publicoutreach/feature-column/fc-2014-08
-   - http://rangevoting.org/GerryExec.html
- - compactness doesn't guarantee anything!
- - efficiency gap visualization(s)?
- - https://www.theatlantic.com/science/archive/2018/01/efficiency-gap-gerrymandering/551492/
- - http://cdmaps.polisci.ucla.edu/
- - http://history.house.gov/Institution/Election-Statistics/Election-Statistics/
- - http://turfjs.org/docs#along
- - https://www.diplateevo.com/gerrymandering-technologists-approach/
+- https://phys.org/news/2018-03-mathematicians-tool-voting-unfairly-drawn.html
+- https://www.quantamagazine.org/the-math-behind-gerrymandering-and-wasted-votes-20171012/
+- https://www.quantamagazine.org/the-mathematics-behind-gerrymandering-20170404/
+- https://sites.tufts.edu/gerrymandr/resources/
+- http://slco.maps.arcgis.com/apps/Cascade/index.html?appid=eeb9eadb9d0d454faadf733ed2f14569
+- http://www.ams.org/publications/journals/notices/201709/rnoti-p1020.pdf
+- http://www.washingtonpost.com/wp-srv/special/politics/gerrymandering/?noredirect=on
+- https://www.politico.com/f/?id=0000015c-11a2-d46a-a3ff-9da240e10002
+- http://theconversation.com/can-math-solve-the-congressional-districting-problem-44963
+- http://www.ams.org/publicoutreach/feature-column/fc-2014-08
+- http://rangevoting.org/GerryExec.html
+- compactness doesn't guarantee anything!
+- https://www.theatlantic.com/science/archive/2018/01/efficiency-gap-gerrymandering/551492/
+- http://cdmaps.polisci.ucla.edu/
+- http://history.house.gov/Institution/Election-Statistics/Election-Statistics/
+- http://turfjs.org/docs#along
+- https://www.diplateevo.com/gerrymandering-technologists-approach/
+- https://projects.fivethirtyeight.com/redistricting-maps
+https://arxiv.org/pdf/1803.02857.pdf
+http://www.ncsl.org/Documents/legismgt/Compactness-Hofeller.pdf (for image of first gerrymander)
+https://arxiv.org/pdf/1710.04193.pdf
+https://theconversation.com/stop-criticizing-bizarrely-shaped-voting-districts-they-might-not-be-gerrymandered-after-all-86510
+http://pi.math.cornell.edu/~ismythe/Lec_15_web.pdf
+http://www.washingtonpost.com/wp-srv/special/politics/gerrymandering/
 
 
 - treatise on systems thinking
