refactoring svg border to new atom

--- a/todo.txt
+++ b/todo.txt
@@ -1,5 +1,4 @@
 - add caption and instructions
-- border for svg?
 - polish styling
   - circles grow on hover
   - circles change color on hover
@@ -7,6 +6,8 @@
 - maybe make dragging easier
 - make isoperimetricexplorer aware of circle radius (fix this)
 - stick the landing (voter suppression, census)
+- change main image
+- add space between slider and svg
 
 LOW PRIORITY
 - get more heat map data (mayyybeeeee)
