--- a/todo.txt
+++ b/todo.txt
@@ -4,6 +4,8 @@
 - add tick labels to x axis
 - connect to machine learning: https://www.quora.com/What-is-Bayesian-machine-learning
 - add caption to bayesian interactive
+- in probability table, highlight the fact that HT and TH are equally likely
+- confirm responsiveness for rent interactive
 
 - add prompts to show algorithm
   - prompts should follow rules (e.g. you can't pick a non-free room when a free room is an option)
