upgrading all dependencies

--- a/todo.txt
+++ b/todo.txt
@@ -1,3 +1,11 @@
+https://www.gatsbyjs.org/docs/add-seo-component/
+ordering by year
+- add "related stories" to end of each story
+- pagination for stories
+- search for stories
+- make sure all package updates work
+- figure out import path without gatsby-plugin-resolve
+
 LOW PRIORITY
 - get more heat map data (mayyybeeeee)
 - add meta tags for /stories endpoint
@@ -11,9 +19,7 @@ LOW PRIORITY
 - update packages
 - line breaks for katex equations on mobile
 - MDX! https://github.com/mdx-js/mdx#mdx-syntax, https://github.com/nhducit/gatsby-plugin-mdx
-- add "related stories" to end of each story
-- pagination for stories
-- search for stories
+
 
 LOWEST PRIORITY
 - look into netlify: https://www.netlify.com/
