--- a/src/pages/articles/gaming-relationships-linear.mdx
+++ b/src/pages/articles/gaming-relationships-linear.mdx
@@ -6,6 +6,8 @@ caption: "A mathematical ballad of love and hate."
 featured_image_caption: "Murray explaining his relationship model. Image credit: Flight of the Conchords (HBO)."
 ---
 
+import { ResponsiveIFrame, GamingLinearRelationships, Sidebar, Latex } from "story_components";
+
 In my book, _[Power Up: Unlocking the Hidden Mathematics in Video Games](https://www.amazon.com/Power-Up-Unlocking-Hidden-Mathematics-Video/dp/0691161518/),_ I write about mathematical models of relationships inspired by games like _The Sims_ and _Skyrim_. I find the models really fun to explore, but there's only so much you can do on the printed page. Here I'd like to provide an overview of what I discuss in the book, along with some more interactive explorations of the models that come up.
 
 The idea of modeling relationships mathematically certainly didn't originate with games. Relationship dynamics have been part of academic research for some time. They've entered popular culture through other mediums, too. One of my favorite examples is this clip from [Flight of the Conchords](https://en.wikipedia.org/wiki/Flight_of_the_Conchords), in which one of the characters, Murray, uses axes to describe his model of friendship.
