--- a/todo.txt
+++ b/todo.txt
@@ -5,7 +5,12 @@
 - pagination for stories
 - search for stories
 - make sure all package updates work
-- eslint config https://www.gatsbyjs.org/packages/gatsby-plugin-eslint/
+- update all atom tests
+- update all molecule tests 
+- figure out failing math helper tests
+- update all helper files and tests
+- integration tests for all stories
+- build breaks! fix this
 
 
 LOW PRIORITY
