updating more image paths

--- a/src/pages/articles/gaming-relationships-linear.mdx
+++ b/src/pages/articles/gaming-relationships-linear.mdx
@@ -1,7 +1,7 @@
 ---
 title: "Gaming Relationships: Linear Approaches"
 date: "2017-11-22"
-featured_image: "murray.jpg"
+featured_image: "../../images/featured_images/murray.jpg"
 caption: "A mathematical ballad of love and hate."
 featured_image_caption: "Murray explaining his relationship model. Image credit: Flight of the Conchords (HBO)."
 ---
