Moving 3rd story to mdx

--- a/src/pages/articles/income-inequality.mdx
+++ b/src/pages/articles/income-inequality.mdx
@@ -1,10 +1,12 @@
 ---
 title: "Laws of Inequality"
 date: "2018-01-30"
-featured_image: "monopoly_man.jpg"
+featured_image: "../../images/featured_images/monopoly_man.jpg"
 caption: "Exploring income and wealth inequality through physics."
 featured_image_caption: "Monopoly man sitting in on a Senate hearing in the wake of the Equifax data breach during the fall of 2017. Image credit: Aaron P. Bernstein/Reuters."
 ---
+
+import { EconomySimulation, Sidebar } from "story_components";
 
 It's a well-established fact that in the United States, [income inequality is increasing](https://en.wikipedia.org/wiki/Income_inequality_in_the_United_States). According to a 2011 [report](https://www.cbo.gov/publication/42729?index=12485) from the Congressional Budget Office, between 1979 and 2011 income for the top 1% of households grew by 275%. Meanwhile, for the bottom 20%, income grew by only 18%.
 
@@ -12,7 +14,7 @@ Looking at different income groups' share of total income tells a similar story.
 
 By 2007, this gap had significantly widened. The top 20% of earners increased their share of the pie by almost ten points, to 55%. This increase is almost entirely explained by huge gains by the top 1%, who saw their income share nearly **double** to 18.6%. Meanwhile, the bottom 20% of earners saw their share decrease two points, to 5.7%. And given current trends over the past decade, it's hard to imagine the picture has gotten much rosier for most Americans.
 
-<CaptionedImage caption="Shares of Income After Transfers and Federal Taxes, 1979 and 2007 (Source: CBO)" width="80%" src="cbo_income_graph.png" />
+![Shares of Income After Transfers and Federal Taxes, 1979 and 2007](../../images/cbo_income_graph.png "Shares of Income After Transfers and Federal Taxes, 1979 and 2007 (Source: CBO)")
 
 As the income gap grows, so too does the _wealth_ gap, which measures a family's total assets. According to a [2016 CBO report](https://www.cbo.gov/publication/51846), the top 10% of families held 76% of the overall wealth in the United States in 2013, up from 67% in 1989. In contrast, the bottom 50% of families held only 1% of the total wealth in 2013, down from 3% in 1989.
 
